# bootstrap

./: .gitignore  .gitmodules  CMakeLists.txt  Knitfile  README.md  build-all.sh  build.sh  scatter.sh  serialize-to-bins.sh  serialize.sh
.github/workflows/: compile.yml
etc/: clang_format.cmake
src/: CMakeLists.txt
src/clang/: CMakeLists.txt  c-to-elf.cc  c-to-elf.hh  cc1args.h  depfile.h  depfile.hh
src/fix-driver/: CMakeLists.txt  asm.wat  c-to-elf-driver.cc  compile.wat  ifstream-stub.hh  link-elfs-driver.cc  map.wat  stubs.c  wasisnapshot.c  wasm2c-driver.cc
src/lld/: link-elfs.cc  link-elfs.hh
src/serialize/: CMakeLists.txt  handle.hh  name.hh  serialize-clang-dep.cc  serialize-file.cc  serialize-to-bins.cc  serialize.cc  serialize.hh
src/sys-driver/: CMakeLists.txt  c-to-elf-driver.cc  link-elfs-driver.cc  wasm2c-driver.cc
src/util/: base16.hh  base64.hh  mmap.hh  sha256.cc
src/wasm2c/: .gitignore  CMakeLists.txt  initcomposer.cc  initcomposer.hh  shims.c  shims.h  wasm-rt-impl.c  wasm-to-c.cc  wasm-to-c.hh  wasminspector.cc  wasminspector.hh
